Bug 167277 - With Skia/Vulkan enabled, line numbers aren't updated while scrolling in Basic IDE
Summary: With Skia/Vulkan enabled, line numbers aren't updated while scrolling in Basi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-28 07:49 UTC by Mike Kaganski
Modified: 2025-07-02 06:59 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screencast of the problematic scrolling (4.53 MB, image/gif)
2025-06-28 07:49 UTC, Mike Kaganski
Details
Scrolling with Skia/Raster (for comparison) (3.52 MB, image/gif)
2025-06-28 07:50 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-06-28 07:49:46 UTC
Created attachment 201526 [details]
Screencast of the problematic scrolling

Enable Skia/Vulkan.
Open attachment 201438 [details], which has rather long Basic module.
Open that module in the Basic IDE.
Make sure that the line numbers are shown (View->Line Numbers).
Put cursor to the top of the module text, and press and hold Page Down button to scroll to the bottom.

=> notice how the line numbers are not updated, or updated with large delays, until you finish scrolling.
Similar thing happens when scrolling by dragging the scrollbar thumb with mouse.
When using Arrow Down key instead of Page Down, the update of the lines is also broken, but additionally, some drawing artifacts appear in the line numbers area.
The area with breakpoints is also affected.

This problem does not happen with Skia/Raster, or with Skia disabled.

The problem makes is more difficult to quickly scroll to a given line number (or to a breakpoint) using the mentioned ways (yes I know that there exist line number indicator in the status bar, that is updated OK; and that there is a Go To Line dialog; but their existence does not disqualify the described problem as a bug; and these existing means do not allow to "go to a breakpoint").
Comment 1 Mike Kaganski 2025-06-28 07:50:14 UTC
Created attachment 201527 [details]
Scrolling with Skia/Raster (for comparison)
Comment 2 Mike Kaganski 2025-06-28 08:19:30 UTC
https://gerrit.libreoffice.org/c/core/+/187131
Comment 3 Commit Notification 2025-06-28 16:46:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a031b751a1b48260c33aa2fffd12dc075d0178d

tdf#167277: make LineNumberWindow and BreakPointWindow paint immediately

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-02 06:59:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/42a0f7d838e4360fbb07a49fa310d0d5bc1813b1

tdf#167277: make LineNumberWindow and BreakPointWindow paint immediately

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.