tdf#167277: make LineNumberWindow and BreakPointWindow paint immediately

... on scroll. No idea why did it only show up with Vulkan; but for these
windows, the immediate paint is the correct thing to do.

The behavior of Paint wrt. SyncYOffset was changed: on invalidation, now
it doesn't return from Paint, to avoid flicker (the background of windows
is already erased; keeping it white until next paint can be noticed).

Change-Id: I5d306122f4465ca4556cd5b8c69d5f047ce9b53f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187131
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>